# SAGE-Viewer

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  install_hpc.sh  pyproject.toml  sage-viewer
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  sync-to-sage-home.yml
docs/: index.md  mkdocs.yml
docs/api/: index.md
docs/getting_started/: configuration.md  installation.md  quickstart.md
docs/physics/: galaxies.md  haloes.md
docs/project/: story_mode_design.md  story_mode_mcr_handoff.md
docs/stylesheets/: extra.css
docs/user_guide/: colormaps.md  console.md  data_sources.md  interface.md  launch_mode.md  library.md  multi_box.md  navigation.md  recording.md  story_mode.md
sage_stories/: mcr.json  smoke_test.json  test-story.json
sage_viewer/: __init__.py  __main__.py  app.py  cli.py  config.py
sage_viewer/examples/: example_tour.json  presentation_template.json
sage_viewer/io/: __init__.py  galaxy_reader.py  halo_reader.py  par_reader.py  sage_header.py
sage_viewer/parallel/: __init__.py  loader.py
sage_viewer/scene/: __init__.py  box_profile.py  camera.py  camera_motion.py  fof_layer.py  galaxy_layer.py  halo_layer.py  heatmap_layer.py  model.py  scene.py
sage_viewer/static/: X-men - TAS (trimmed).mov  sage_theme.css  sage_viewer.js
sage_viewer/story/: __init__.py  engine.py  io.py  keys.py  model.py
sage_viewer/ui/: __init__.py  info_panel.py  layer_panel.py  navigation_panel.py  story_mode.py  toolbar.py
sage_viewer/utils/: __init__.py  catalogue.py  colormap.py  command_parser.py  discover.py  galaxy_info.py  group_info.py  kdtree.py  sizing.py
sage_viewer/wizard/: controller.py  launch.py  ui.py
tests/: conftest.py  test_colormap.py  test_command_parser.py  test_galaxy_reader.py  test_halo_reader.py  test_par_reader.py  test_pso_gallery.py  test_sizing.py  test_snapshot_table.py  test_story.py
visage/: __init__.py  __main__.py  app.py  cli.py
visage/examples/: example_tour.json  presentation_template.json
visage/io/: __init__.py  galaxy_reader.py  par_reader.py  sage_header.py  (+1 more)
(+35 files in other folders)
