[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-viewer"
dynamic = ["version"]
description = "Interactive 3D viewer for SAGE semi-analytic galaxy formation outputs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Michael Bradley", email = "mbrads85@live.com.au" }]
requires-python = ">=3.10"
keywords = ["astronomy", "galaxy-formation", "dark-matter", "visualization", "SAGE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pyvista>=0.44",
    "trame>=3.6",
    "trame-vtk>=2.8",
    "trame-vuetify>=2.7",
    "h5py>=3.9",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-macros-plugin>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "black>=24.0",
    "pre-commit>=3.6",
    "sage-viewer[docs]",
]

[project.scripts]
sage-viewer = "sage_viewer.cli:main"

[project.urls]
Homepage = "https://github.com/MBradley1985/SAGE-Viewer"
Documentation = "https://sage-viewer.readthedocs.io/en/latest/"
Repository = "https://github.com/MBradley1985/SAGE-Viewer"
Issues = "https://github.com/MBradley1985/SAGE-Viewer/issues"

[tool.setuptools.dynamic]
version = { attr = "sage_viewer._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["sage_viewer*"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "UP"]
ignore = ["E203", "E266", "E501", "F403", "F401"]

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
